2009-05-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-00
	* add ability to consider |eta|: if the lowest bound binseta[0]
	is>=0, eta is interpreted as |eta|
	* add eta- and phi- response to JetResponseAnalyzer and
	jet_response_analyzer_x
	* update histogram mode defaults

2009-04-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-05
	* add bin/weighted_spectrum_x and config/weighted_spectrum.config

2009-04-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-04
	* fix jet_response_fitter_x to work correctly with ROOT >5.18
	* allow response comparisons in jet_inspect_jra_histos_x
	* add parameter xsection to jet_response_analyyzer_x: if set >0.0,
	histogram entries will be weighted by xsection/tree->GetEntries()

2009-03-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-03
	* protect histgram filling against empty vectors binsEta_ and
	binsPhi_

2009-02-27  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-02
	* remove features not necessary/supported on CMSSW_2_2_4: pflow
	re-reconstruction, track-jet reconstruction, anti-kt &
	cambridge/aachen, etc.

2008-12-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-00
	* requires JetMETAnalysis/JetUtilities V00-01-00
	* replace HistogramLoader with ObjectLoader<TH1F> in all relevant
	binaries in /bin

2008-12-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-05
	* add nrefmax parameter to jet_response_analyzer_x: only the
	nrefmax leading references are considered if set to >0.

2008-12-03  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-04
	* add calo-tower fix to test/JRAt_WithFlavor_cfg.py

2008-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-03
	* add *_cfg.py files which consider the flavor of genjets
	* cleanup & move *_cfg.py to test