@@ -1,3 +1,10 @@
+2009-05-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-02-01
+	* add EtaRsp* as a function of eta AND pT
+	* add PhiRsp* as a function of eta AND pT
+	* make weighted jet spectrum color schema prettier
+
 2009-05-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-02-00
